Changelog file for Redirector component.

Redirector 1.0 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed bugs in redirects grid
- Initial commit