@@ -77,6 +77,14 @@ $attr = array(
                     xPDOTransport::PRESERVE_KEYS => false,
                     xPDOTransport::UPDATE_OBJECT => true,
                     xPDOTransport::UNIQUE_KEY => 'name',
+                    xPDOTransport::RELATED_OBJECTS => true,
+                    xPDOTransport::RELATED_OBJECT_ATTRIBUTES => array (
+                        'PluginEvents' => array(
+                            xPDOTransport::PRESERVE_KEYS => true,
+                            xPDOTransport::UPDATE_OBJECT => false,
+                            xPDOTransport::UNIQUE_KEY => array('pluginid','event'),
+                        ),
+                    ),
                 ),
             ),
         ),
@@ -84,6 +92,14 @@ $attr = array(
             xPDOTransport::PRESERVE_KEYS => false,
             xPDOTransport::UPDATE_OBJECT => true,
             xPDOTransport::UNIQUE_KEY => 'name',
+            xPDOTransport::RELATED_OBJECTS => true,
+            xPDOTransport::RELATED_OBJECT_ATTRIBUTES => array (
+                'PluginEvents' => array(
+                    xPDOTransport::PRESERVE_KEYS => true,
+                    xPDOTransport::UPDATE_OBJECT => false,
+                    xPDOTransport::UNIQUE_KEY => array('pluginid','event'),
+                ),
+            ),
         ),
     ),
 );
