@@ -2,5 +2,6 @@ Changelog file for Redirector component.
 
 Redirector 1.0 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Implement plugin, load pluginevents into build
 - Fixed bugs in redirects grid
 - Initial commit
